Fix some more spacing and add multiline calendar widgets.

--- a/panels/datetime/data/theme/date-panel.css
+++ b/panels/datetime/data/theme/date-panel.css
@@ -1,7 +1,7 @@
 *#datetime-panel
 {
   border-image: url('panel-background.png') 15;
-  padding: 6 0 2 0;
+  padding: 6 2 2 2;
 }
 
 *#CompletionScrollView
